fix: 파라미터 provider 제거
